# em-dee-pdf

./: .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  theme-example.md
crates/em-dee-pdf-cli/: Cargo.toml
crates/em-dee-pdf-cli/src/: main.rs
crates/em-dee-pdf-core/: Cargo.toml
crates/em-dee-pdf-core/src/: config.rs  error.rs  lib.rs  mermaid.rs  parser.rs  renderer.rs  tables.rs  theme.rs  transpiler.rs
crates/md-pdf-cli/: Cargo.toml
crates/md-pdf-cli/src/: main.rs
crates/md-pdf-core/: Cargo.toml
crates/md-pdf-core/src/: config.rs  error.rs  lib.rs  mermaid.rs  renderer.rs  tables.rs  transpiler.rs
examples/: showcase.md
samples/: amber-sections.typ  amber.typ  book-sections.typ  book.typ  boxed-sections.typ  boxed.typ  cards-sections.typ  cards.typ  coral-sections.typ  coral.typ  corporate-sections.typ  corporate.typ  emerald-sections.typ  emerald.typ  indigo-sections.typ  indigo.typ  orange-sections.typ  orange.typ  panels-sections.typ  panels.typ  rose-sections.typ  rose.typ  sky-sections.typ  sky.typ  slate-sections.typ  slate.typ  stone-sections.typ  stone.typ  teal-sections.typ  teal.typ  tech-sections.typ  tech.typ  violet-sections.typ  violet.typ  zinc-sections.typ  zinc.typ
scripts/: docker-build.sh  em-dee-pdf-docker  md-pdf-docker  render-pdf-page.py
tests/fixtures/: basic.md
themes/: amber.typ  book.typ  boxed.typ  cards.typ  coral.typ  corporate.typ  emerald.typ  indigo.typ  orange.typ  panels.typ  rose.typ  sky.typ  slate.typ  stone.typ  teal.typ  tech.typ  violet.typ  zinc.typ
