[package]
name = "em-dee-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-quality Markdown to PDF converter CLI"
keywords = ["markdown", "pdf", "typst", "converter", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "em-dee-pdf"
path = "src/main.rs"

[dependencies]
em-dee-pdf-core = { path = "../em-dee-pdf-core" }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
