[package]
name = "em-dee-pdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Markdown to PDF conversion via Typst"
keywords = ["markdown", "pdf", "typst", "converter", "library"]
categories = ["text-processing"]

[dependencies]
# Markdown parsing
comrak = { workspace = true }

# PDF generation via Typst
typst = { workspace = true }
typst-pdf = { workspace = true }
typst-as-lib = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
dirs = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
